[gd_scene load_steps=4 format=3 uid="uid://c7xex3j31dnx2"]

[ext_resource type="Script" path="res://scripts/Screen Code/ingame_menu.gd" id="1_7h557"]
[ext_resource type="Texture2D" uid="uid://b6bw26g1hetog" path="res://Assets/Backgrounds/free-futuristic-abstract-background-87pdm-1684981114.jpg" id="2_4gq6d"]
[ext_resource type="PackedScene" uid="uid://cf085neaei5xo" path="res://Screens/Options:Settings Menu/options_menu.tscn" id="3_bdy5c"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7h557")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = -105.5
offset_right = 96.5
offset_bottom = 105.5
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_4gq6d")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Parallel Menu"
horizontal_alignment = 1

[node name="resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="settings" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="save" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="load" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="exit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Options_Menu" parent="." instance=ExtResource("3_bdy5c")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Panel/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/exit" to="." method="_on_exit_pressed"]
